fix: warnings cleanup